<resources>
    <string name="app_name">Real Estate App</string>
    <string name="placeholder_text">Placeholder Text</string>
    <string name="go_to_sign_in_page">Go to sign in page</string>
    <string name="go_to_search_page">Go to search page</string>
    <string name="close">Close</string>
    <string name="dismiss">Dismiss</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="other">Other</string>
    <string name="button_continue">Continue</string>
    <string name="required">Required</string>
    <string name="skip">Skip</string>
    <string name="confirm_and_continue"><![CDATA[Confirm & Continue]]></string>
    <string name="coming_soon">Coming soon</string>
    <string name="single_string">%1$s</string>
    <string name="double_string">%1$s%2$s</string>
    <string name="copied">Copied</string>
    <string name="cancel">Cancel</string>
    <string name="cancelling">Cancelling</string>
    <string name="facebook_app_id">585599636490913</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234</string>
    <string name="facebook_client_token">634350336f48d2aac54fac0f36d15c1e</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="bottom_nav_search_title">Search</string>
    <string name="bottom_nav_saved_title">Saved</string>
    <string name="bottom_nav_my_listings_title">My Listings</string>
    <string name="bottom_nav_inbox_title">Inbox</string>
    <string name="bottom_nav_sign_in_title">Sign In</string>
    <string name="bottom_nav_account_title">Account</string>
    <string name="sign_in_header">Sign in or create an account</string>
    <string name="sign_in_sub">Choose one of the options below</string>
    <string name="sign_in_email">Sign in with email</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_create_account">Create an account</string>
    <string name="or">or</string>
    <string name="sign_in_tos">By signing in you agree to our Terms of Service and Privacy Policy</string>
    <string name="sign_in_loading">Signing you in</string>
    <string name="no_internet_connection">Offline mode</string>
    <string name="error_network">Network error</string>
    <string name="error_occurred">An error occurred. Please try again</string>
    <string name="error_invalid_credentials">Invalid email or password</string>
    <string name="display_name_error">Failed to update the display name</string>
    <string name="display_name_success">Display name updated</string>
    <string name="edit_email_success">Email updated</string>
    <string name="edit_email_error">Failed to update email</string>
    <string name="edit_password_success">Password updated</string>
    <string name="edit_password_error">Failed to update password</string>
    <string name="reset_password_success">Email sent</string>
    <string name="reset_password_error">Failed to send email</string>
    <string name="create_account_error">Failed to create account. Please try again later</string>
    <string name="error_sign_in">Sign in failed</string>
    <string name="photos_permission_denied">In order to add photos to your listing the app needs access to your photos</string>
    <string name="error_invalid_number">Invalid number</string>
    <string name="error_invalid">Invalid</string>
    <string name="error_add_listing_unauthenticated">You must be signed in to add a listing</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_unauthenticated">An error occurred while verifying your information. Please sign in again</string>
    <string name="email_sign_in_header">Sign in with email</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_in_button">Sign In</string>
    <string name="reset_password_title">Rest password</string>
    <string name="reset_password_sub">
        An email will be sent to your email address. If you did not receive the email, please check your spam folder. Follow the instructions in the email to reset your password
    </string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send">Send</string>
    <string name="create_account_header">Create an account</string>
    <string name="create_account_confirm_password">Confirm password</string>
    <string name="create_account_button">Create Account</string>
    <string name="create_account_tos">By creating an account you agree to our Terms of Service and Privacy Policy</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="password_length_error">Password must be at least 6 characters long</string>
    <string name="toolbar_list_title">List</string>
    <string name="toolbar_map_title">Map</string>
    <string name="toolbar_filter_title">Filter</string>
    <string name="toolbar_sort_title">Sort</string>
    <string name="toolbar_save_search_title">Save search</string>
    <string name="search_query_hint">Search city or area</string>
    <string name="saved_homes_tab">Saved homes</string>
    <string name="saved_searches_tab">Saved searches</string>
    <string name="saved_homes_header">Save the homes you like</string>
    <string name="saved_homes_sub">Found a home you like? click the favorite button to add it and keep track of it here</string>
    <string name="saved_searches_header">Save the areas you are interested in</string>
    <string name="saved_searches_sub">Quickly access and keep track of new listings in your favorite areas</string>
    <string name="my_home_header">All your listings in one place</string>
    <string name="my_home_sub">You have to be signed in to add and manage your listings</string>
    <string name="my_home_list_empty">Seems like you have not added any listings. Click the button below to add one</string>
    <string name="my_home_add_listing">Add your listing</string>
    <string name="add_listing_title">Add your listing</string>
    <string name="add_listing_your_info">Your information</string>
    <string name="add_listing_advertiser">Are you the owner or a broker?</string>
    <string name="add_listing_chip_owner">Owner</string>
    <string name="add_listing_chip_broker">Broker</string>
    <string name="add_listing_owner_acknowledgement">By selecting "Owner" you acknowledge that you are the owner of the property and have all the legal documents that prove your ownership of the property. Not adhering to this term will make you subject to legal accountability in the future</string>
    <string name="add_listing_broker_acknowledgement">By selecting "Broker" you acknowledge that you have permission from the property\'s owner to advertise their property on our platform and talk to potential buyers on the owner\'s behalf. Not adhering to this term will make you subject to legal accountability in the future</string>
    <string name="add_listing_phone_number">Phone\nnumber</string>
    <string name="add_listing_email">Email</string>
    <string name="add_listing_optional">Optional</string>
    <string name="add_listing_property_address">Property address</string>
    <string name="add_listing_status">Status</string>
    <string name="add_listing_state">State</string>
    <string name="add_listing_state_spinner">Select state</string>
    <string name="add_listing_city">City</string>
    <string name="add_listing_city_spinner">Select city</string>
    <string name="add_listing_region">Region</string>
    <string name="add_listing_select_region">Select region</string>
    <string name="add_listing_enter_region">Enter region</string>
    <string name="add_listing_block">Block/\nLane</string>
    <string name="add_listing_property_number">Property\nnumber</string>
    <string name="add_listing_more_info">More\ninformation\n(optional)</string>
    <string name="add_listing_more_info_inline">More information (optional)</string>
    <string name="add_listing_utilities">Utilities</string>
    <string name="add_listing_utilities_more_hint">If you have more information about utilities you can add it here</string>
    <string name="add_listing_photos">Photos</string>
    <string name="add_listing_add_photos">Add photos</string>
    <plurals name="added_photos">
        <item quantity="one">One photo added</item>
        <item quantity="other">%1$d photos added</item>
    </plurals>
    <string name="add_listing_photos_dialog_sub">Click an item below to add a photo from your device</string>
    <string name="add_listing_photos_main_photo">Main photo</string>
    <string name="add_listing_additional_info">Additional information</string>
    <string name="add_listing_additional_info_hint">If you have other information that was not covered by the form you can add it below</string>
    <string name="add_listing_price_header">Price</string>
    <string name="add_listing_currency">Currency</string>
    <string name="add_listing_select_currency">Select currency</string>
    <string name="add_listing_currency_usd">USD</string>
    <string name="add_listing_currency_sdg">SDG</string>
    <string name="add_listing_price">Price</string>
    <string name="add_listing_installments">Monthly installments</string>
    <string name="add_listing_down_payment">Down\npayment</string>
    <string name="add_listing_monthly_installment">Monthly\ninstallment</string>
    <string name="add_listing_installment_period">Installment\nperiod</string>
    <string name="add_listing_submit">Submit listing</string>
    <string name="none">None</string>
    <string name="add_listing_m2_suffix">m\u00B2</string>
    <string name="add_listing_acres_suffix">acres</string>
    <string name="add_listing_usd_prefix">$</string>
    <string name="add_listing_sdg_suffix">SDG</string>
    <string name="add_listing_month_suffix">Month</string>
    <string name="add_listing_uploading_photos">Uploading photos</string>
    <string name="listing_preview_more_info">More information</string>
    <string name="property_type_title">Property type</string>
    <string name="property_type_header">Choose property type</string>
    <string name="property_type_house">House</string>
    <string name="property_type_apartment">Apartment</string>
    <string name="property_type_building">Building</string>
    <string name="property_type_store">Store</string>
    <string name="property_type_land">Land</string>
    <string name="property_type_warehouse">Warehouse</string>
    <string name="property_type_farm">Farm</string>
    <string name="add_house_construction_details">Construction</string>
    <string name="add_house_area_lot">Lot area</string>
    <string name="add_house_area_built">Built area</string>
    <string name="add_house_year_built">Year built</string>
    <string name="add_house_structure_type">Structure type</string>
    <string name="add_house_finishing">Finishing</string>
    <string name="account_sign_in_header">Sign In</string>
    <string name="account_sign_in_sub">Sign in to add and manage listings, send and receive requests and contact homeowners</string>
    <string name="account_profile_title">Profile</string>
    <string name="account_language_title">Language</string>
    <string name="account_dark_mode_title">Night mode</string>
    <string name="account_notifications_title">Notifications</string>
    <string name="account_feedback_title">Help and feedback</string>
    <string name="account_tos_title">Terms of service</string>
    <string name="account_privacy_policy_title">Privacy policy</string>
    <string name="account_sign_out_title">Sign out</string>
    <string name="account_version">Version</string>
    <string name="listing_item_area_m2">%1$s m\u00B2</string>
</resources>