<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPropertyType"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/property_type_title"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="?attr/colorSecondary"
        android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvPropertyTypeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:text="@string/property_type_header"
        style="@style/HeaderText"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/toolbarPropertyType"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgPropertyType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:singleSelection="true"
        app:chipSpacing="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tvPropertyTypeHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipHouse"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            style="@style/ChipStyleFilter"
            android:text="@string/property_type_house" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipApartment"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            style="@style/ChipStyleFilter"
            android:text="@string/property_type_apartment"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipBuilding"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            style="@style/ChipStyleFilter"
            android:text="@string/property_type_building"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipStore"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            style="@style/ChipStyleFilter"
            android:text="@string/property_type_store"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipLand"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            style="@style/ChipStyleFilter"
            android:text="@string/property_type_land"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipWarehouse"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            style="@style/ChipStyleFilter"
            android:text="@string/property_type_warehouse"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFarm"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_80sdp"
            style="@style/ChipStyleFilter"
            android:text="@string/property_type_farm"/>
    </com.google.android.material.chip.ChipGroup>

    <include
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        style="@style/BigButton"
        layout="@layout/loading_button"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/cgPropertyType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>