<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAccountHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:background="@drawable/account_header_background"
        android:elevation="@dimen/_6sdp"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_12sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvAccountSignInHeader"
            style="@style/HeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/account_sign_in_header"
            android:textSize="@dimen/_24ssp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAccountDisplayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/placeholder_text"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/_24ssp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAccountSignInHeader" />

        <TextView
            android:id="@+id/tvAccountSignInSub"
            style="@style/SubText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/account_sign_in_sub"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAccountSignInHeader" />

        <Button
            android:id="@+id/btnAccountSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:background="@drawable/button_background_round"
            android:letterSpacing="0"
            android:text="@string/go_to_sign_in_page"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAccountSignInSub" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvAccountProfile"
        style="@style/AccountItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_26sdp"
        android:background="@drawable/account_item_background"
        android:text="@string/account_profile_title"
        app:drawableStartCompat="@drawable/ic_person"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clAccountHeader" />

    <TextView
        android:id="@+id/tvAccountNotifications"
        style="@style/AccountItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_goneMarginTop="@dimen/_26sdp"
        android:background="@drawable/account_item_background"
        android:text="@string/account_notifications_title"
        app:drawableStartCompat="@drawable/ic_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccountProfile" />

    <TextView
        android:id="@+id/tvAccountLanguage"
        style="@style/AccountItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/account_item_background"
        android:text="@string/account_language_title"
        app:drawableStartCompat="@drawable/ic_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccountNotifications" />

    <TextView
        android:id="@+id/tvAccountDarkMode"
        style="@style/AccountItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/account_item_background"
        android:clickable="false"
        android:text="@string/account_dark_mode_title"
        app:drawableEndCompat="@null"
        app:drawableStartCompat="@drawable/ic_dark_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccountLanguage" />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@id/tvAccountDarkMode"
        app:layout_constraintEnd_toEndOf="@id/tvAccountDarkMode"
        app:layout_constraintTop_toTopOf="@id/tvAccountDarkMode" />

    <TextView
        android:id="@+id/tvAccountFeedback"
        style="@style/AccountItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/account_item_background"
        android:text="@string/account_feedback_title"
        app:drawableStartCompat="@drawable/ic_feedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccountDarkMode" />

    <TextView
        android:id="@+id/tvAccountToS"
        style="@style/AccountItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/account_item_background"
        android:text="@string/account_tos_title"
        app:drawableStartCompat="@drawable/ic_tos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccountFeedback" />

    <TextView
        android:id="@+id/tvAccountPrivacyPolicy"
        style="@style/AccountItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/account_item_background"
        android:text="@string/account_privacy_policy_title"
        app:drawableStartCompat="@drawable/ic_tos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccountToS" />

    <TextView
        android:id="@+id/tvAccountSignOut"
        style="@style/AccountItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/account_item_background"
        android:text="@string/account_sign_out_title"
        app:drawableEndCompat="@null"
        app:drawableStartCompat="@drawable/ic_sign_out"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccountPrivacyPolicy" />

    <TextView
        android:id="@+id/tvAccountVersion"
        style="@style/SubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/account_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccountSignOut"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
