<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_line_background"
    android:paddingTop="@dimen/_10sdp"
    android:paddingStart="@dimen/_10sdp"
    android:paddingEnd="@dimen/_10sdp"
    android:paddingBottom="@dimen/_20sdp">

    <TextView
        android:id="@+id/tvConstructionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_house_construction_details"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLotArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:text="@string/add_house_area_lot"
        android:textSize="@dimen/_13ssp"
        app:drawableStartCompat="@drawable/ic_rectangle"
        app:drawableTint="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvConstructionHeader" />

    <TextView
        android:id="@+id/tvLotAreaValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_170sdp"
        android:text="@string/listing_item_area_m2"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="@id/tvLotArea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvLotArea" />

    <TextView
        android:id="@+id/tvBuiltArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:text="@string/add_house_area_built"
        android:textSize="@dimen/_13ssp"
        app:drawableStartCompat="@drawable/ic_home_selected"
        app:drawableTint="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLotAreaValue" />

    <TextView
        android:id="@+id/tvBuiltAreaValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_170sdp"
        android:text="@string/listing_item_area_m2"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="@id/tvBuiltArea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvBuiltArea" />

    <TextView
        android:id="@+id/tvYearBuilt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:text="@string/add_house_year_built"
        android:textSize="@dimen/_13ssp"
        app:drawableStartCompat="@drawable/ic_calendar"
        app:drawableTint="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBuiltAreaValue" />

    <TextView
        android:id="@+id/tvYearBuiltValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_170sdp"
        android:text="@string/single_string"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="@id/tvYearBuilt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvYearBuilt" />

    <TextView
        android:id="@+id/tvStructureType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:text="@string/add_house_structure_type"
        android:textSize="@dimen/_13ssp"
        app:drawableStartCompat="@drawable/ic_construction_tools"
        app:drawableTint="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvYearBuiltValue" />

    <TextView
        android:id="@+id/tvStructureTypeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_170sdp"
        android:text="@string/single_string"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="@id/tvStructureType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvStructureType" />

    <TextView
        android:id="@+id/tvFinishing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:text="@string/add_house_finishing"
        android:textSize="@dimen/_13ssp"
        app:drawableStartCompat="@drawable/ic_finishing"
        app:drawableTint="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStructureTypeValue" />

    <TextView
        android:id="@+id/tvFinishingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_170sdp"
        android:text="@string/single_string"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="@id/tvFinishing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvFinishing" />

        <TextView
        android:id="@+id/tvMoreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:text="@string/listing_preview_more_info"
        android:textSize="@dimen/_13ssp"
        app:drawableStartCompat="@drawable/ic_edit"
        app:drawableTint="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFinishingValue" />

    <TextView
        android:id="@+id/tvMoreInfoValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/single_string"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMoreInfo" />
</androidx.constraintlayout.widget.ConstraintLayout>